--- a/src/styles/theme/dark.scss
+++ b/src/styles/theme/dark.scss
@@ -47,5 +47,7 @@ $s-shadow-color-primary--dark: #391057 !default;
 $s-shadow-color-secondary--dark: #9B6FA5 !default;
 // element shadows
 $s-shadow-element--dark: 1px 1px 2px var(--s-shadow-color-light-darken--dark), inset -5px -5px 5px var(--s-shadow-color-light-dark--dark), inset 1px 1px 10px var(--s-shadow-color-dark--dark) !default;
+$s-shadow-element-flipped--dark: 1px -1px 2px var(--s-shadow-color-light-darken--dark), inset -5px 5px 5px var(--s-shadow-color-light-dark--dark), inset 1px -1px 10px var(--s-shadow-color-dark--dark) !default;
 $s-shadow-element-pressed--dark: -5px -5px 10px var(--s-shadow-color-dark-lighten--dark), 2px 2px 15px var(--s-color-base-background--dark), inset 1px 1px 2px var(--s-shadow-color-dark-lighten--dark) !default;
+$s-shadow-element-pressed-flipped--dark: -5px 5px 10px var(--s-shadow-color-dark-lighten--dark), 2px -2px 15px var(--s-color-base-background--dark), inset 1px -1px 2px var(--s-shadow-color-dark-lighten--dark) !default;
 $s-shadow-dialog--dark: -10px -10px 30px var(--s-shadow-color-dark-lighten--dark), 20px 20px 60px var(--s-color-base-background--dark), inset 1px 1px 10px var(--s-shadow-color-dark-light--dark) !default;
